# bevy_sepax2d

./: Cargo.toml  LICENSE  README.md
examples/: platformer.rs  shmup.rs
src/: components.rs  lib.rs  plugin.rs
