[package]
name = "bevy_sepax2d"
license = "MIT OR Apache-2.0"
description = "Plugins and helpful methods for using sepax2d with Bevy for 2d overlap detection and collision resolution."
version = "0.1.1"
edition = "2021"
repository = "https://github.com/meowitzher/bevy_sepax2d/"
keywords = ["gamedev", "2d", "collision", "bevy"]
exclude = ["assets/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["bevy_prototype_lyon", "bevy/default"]

[dependencies]
sepax2d = "0.3.4"
bevy = { version = "0.7", default-features = false, features = [] }
bevy_prototype_lyon = { version = "0.5", optional = true }

[dev-dependencies]
rand = "0.8"

[[example]]
name = "platformer"
required-features = ["debug"]
path = "examples/platformer.rs"

[[example]]
name = "shmup"
required-features = ["debug"]
path = "examples/shmup.rs"